# predict-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  health.py
app/api/v1/: __init__.py  predict.py  predictor.py
app/models/: prediction.py
app/models/v1/: predict.py
app/services/: predict.py  upload.py
app/utils/: config.py  events.py  logger.py  paginator.py  types.py
ml/features/: build_features.py
ml/model/examples/: example.json
tests/: test_pagination_behavior.py
