[tool.poetry]
name = "predict-service"
version = "0.1.0"
description = "Predict mircoservice for ML models"
authors = ["Nitesh Laller <nitesh.laller@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "0.109.1"
motor = "3.3.2"
uvicorn = "0.27.1"
pydantic = "2.6.0"
requests = "2.31.0"
loguru = "0.7.2"
joblib = "1.3.2"
scikit-learn = "1.4.0"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "0.23.5"
black = "24.2.0"
mypy = "1.8.0"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
files = "app, tests"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''
